--- a/StockForms.csproj
+++ b/StockForms.csproj
@@ -134,6 +134,12 @@
     <Compile Include="Forms\QuoteForm.Designer.cs">
       <DependentUpon>QuoteForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Test.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Test.Designer.cs">
+      <DependentUpon>Test.cs</DependentUpon>
+    </Compile>
     <Compile Include="Interfaces\ICashManagement.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -143,7 +149,8 @@
     <Compile Include="Forms\SearchForm.Designer.cs">
       <DependentUpon>SearchForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="StockListModel.cs" />
+    <Compile Include="ResultModels\IndicesResultModel.cs" />
+    <Compile Include="ResultModels\StockListModel.cs" />
     <EmbeddedResource Include="Forms\BuyStockForm.resx">
       <DependentUpon>BuyStockForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -158,6 +165,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\SearchForm.resx">
       <DependentUpon>SearchForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Test.resx">
+      <DependentUpon>Test.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
