--- a/StockForms.csproj
+++ b/StockForms.csproj
@@ -146,6 +146,12 @@
     <Compile Include="Forms\SellStockForm.Designer.cs">
       <DependentUpon>SellStockForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\TestFORM.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\TestFORM.Designer.cs">
+      <DependentUpon>TestFORM.cs</DependentUpon>
+    </Compile>
     <Compile Include="Interfaces\ICashManagement.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -171,6 +177,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\SearchForm.resx">
       <DependentUpon>SearchForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\TestFORM.resx">
+      <DependentUpon>TestFORM.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
