--- a/StockForms.csproj
+++ b/StockForms.csproj
@@ -25,7 +25,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>3</ApplicationRevision>
+    <ApplicationRevision>4</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -202,6 +202,9 @@
     <EmbeddedResource Include="Forms\DepositBox.resx">
       <DependentUpon>DepositBox.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\PortfolioForm.resx">
+      <DependentUpon>PortfolioForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\QuoteForm.resx">
       <DependentUpon>QuoteForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -252,7 +255,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Cash.txt" />
-    <Content Include="Coding Nodes.txt" />
+    <Content Include="Coding Notes.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\System.Text.Json.6.0.6\build\System.Text.Json.targets" Condition="Exists('packages\System.Text.Json.6.0.6\build\System.Text.Json.targets')" />
