READ CODING NOTES DOT TXT

--- a/App.config
+++ b/App.config
@@ -1,8 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 
+  <configSections>
+  </configSections>
   <connectionStrings>
-    <add name="portfolios" connectionString="Data Source=(localdb)\MSSQLLocalDB;           Initial Catalog=portfolios;           Integrated Security=True;           Connect Timeout=30;           Encrypt=False;           TrustServerCertificate=False;           ApplicationIntent=ReadWrite;           MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+    <add name="portfolios" connectionString="Data Source=(localdb)\MSSQLLocalDB;           Initial Catalog=portfolios;           Integrated Security=True;           Connect Timeout=30;           Encrypt=False;           TrustServerCertificate=False;           ApplicationIntent=ReadWrite;           MultiSubnetFailover=False"
+      providerName="System.Data.SqlClient" />
+    <add name="StockForms.Properties.Settings.portfoliosConnectionString"
+      connectionString="Data Source=reborn;Initial Catalog=portfolios;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="StockForms.Properties.Settings.portfoliosConnectionString1"
+      connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=portfolios;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <startup> 
